--- a/smoking_test.html
+++ b/smoking_test.html
@@ -9,6 +9,7 @@
   </style>
   <script language="javascript" src="./core/fundamental/gates.js"></script>
   <script language="javascript" src="./core/fundamental/simulating.js"></script>
+  <script language="javascript" src="./core/prefabs/stateful.js"></script>
   <script language="javascript" src="./visualization/time-sequence.js"></script>
   <script language="javascript" src="./visualization/input-interfaces.js"></script>
   <script language="javascript" src="./visualization/screen.js"></script>
@@ -19,6 +20,7 @@
     var d1 = new Connector( null, 1, "delay_1" );
     var d2 = new Connector( null, 2, "delay_2" );
     var d3 = new Connector( null, 3, "delay_3" );
+
     d1.connector_to( clk );
     d2.connector_to( clk );
     d3.connector_to( clk );
@@ -26,13 +28,18 @@
     g_Or_d1_d2_d3.inputs.push( d1 );
     g_Or_d1_d2_d3.inputs.push( d2 );
     g_Or_d1_d2_d3.inputs.push( d3 );
+    var g_NOr_d1_d2_d3 = new NOrGate("nor_d1_d2_d3" );
+    g_NOr_d1_d2_d3.inputs.push( d1 );
+    g_NOr_d1_d2_d3.inputs.push( d2 );
+    g_NOr_d1_d2_d3.inputs.push( d3 );
+
     var g_Not = new NotGate( "not_d1" );
     g_Not.inputs.push( d1 );
     var g_And_clk_d3 = new AndGate( "and_clk_d3" );
     g_And_clk_d3.inputs.push( clk );
     g_And_clk_d3.inputs.push( d3 );
     
-    var sigs = [clk, d1, d2, d3, g_Or_d1_d2_d3, g_Not, g_And_clk_d3];
+    var sigs = [clk, d1, d2, d3, g_Or_d1_d2_d3, g_NOr_d1_d2_d3, g_Not, g_And_clk_d3];
 
 
     class ConsoleMonitor { 
@@ -42,11 +49,17 @@
       }
     }
 
-    for( var i = 0 ; i < 4 ; i++ ) {
+    var ss = [];
+    for( var i = 0 ; i < 9 ; i++ ) {
       var s = new Signal( 1, "s"+i );
       var is = new InputSwitch( s, "signalPanel", "active", "inactive", 0 );
       sigs.push( s );
+      ss.push( s );
     }
+    var onebit = new Bit( ss[0], ss[1], "bit" );
+    sigs = sigs.concat( onebit.network );
+    var onebyte = new Octet( ss[0], ss.slice(1), "byte");
+    sigs = sigs.concat( onebyte.network );
     var word = []
     for( var i = 0 ; i < 16 ; i++ ) {
       var bit = new Signal( 0, "word["+i+"]" );
@@ -58,15 +71,17 @@
 
     var dec_display_unsigned = new DecimalDisplay( word, false, "digitPanel", "unsigned_word" );
     var dec_display_signed = new DecimalDisplay( word, true, "digitPanel", "signed_word" );
+    var dec_byte_signed = new DecimalDisplay( onebyte.get_output_endpoints(), true, "digitPanel", "signed_byte" );
 
     var simulator = new Simulator( sigs, 0 );
     var tm = new TimeSequenceMonitor( sigs, "timeseq", 768 );
     var screen = new PixelScreen( sigs, "screen", 64, 64, 8 );
-    var loop = new MainLoop( simulator, 10, 1000 );
+    var loop = new MainLoop( simulator, 1, 1000 );
     loop.register_monitor( new ConsoleMonitor() );
     loop.register_monitor( tm );
     loop.register_monitor( dec_display_unsigned );
     loop.register_monitor( dec_display_signed );
+    loop.register_monitor( dec_byte_signed );
     loop.register_monitor( screen );
     function update( )
     {
