--- a/demos/stable_state_machine.html
+++ b/demos/stable_state_machine.html
@@ -18,7 +18,7 @@
   <script language="javascript" src="/visualization/dec-display.js"></script>
   <script language="javascript" src="/visualization/tracer.js"></script>
   <script language="javascript">
-  var StateMachine = StableStateMachin;
+  var StateMachine = StableStateMachine;
   function Onload( ) {
     const STATE_COUNT = 1024;
     const EVENT_COUNT = 3;
