--- a/demos/state_machine_abcd.html
+++ b/demos/state_machine_abcd.html
@@ -44,6 +44,7 @@
 
     seq_sigs.push( changes_when_d.get_state_decoded_output_by_name( '0' ) );
     seq_sigs.push( changes_when_d.get_state_decoded_output_by_name( '1' ) );
+    seq_sigs = seq_sigs.concat( changes_when_d.funs );
 
     var abcd = new StableStateMachine( "a" , [
       ['a', '0', 'b'],
@@ -62,6 +63,8 @@
     seq_sigs.push( abcd.get_state_decoded_output_by_name( 'b' ) );
     seq_sigs.push( abcd.get_state_decoded_output_by_name( 'c' ) );
     seq_sigs.push( abcd.get_state_decoded_output_by_name( 'd' ) );
+
+    var tracing_abcd = new Tracer( abcd.get_output_endpoints(), "tracing", "abcd_bits_0:3" );
     
 
     var tm = new TimeSequenceMonitor( seq_sigs, "timeseq", 768 );
@@ -73,6 +76,7 @@
     }
     setInterval( update, loop.frame_in_ms );
     loop.register_monitor( tm );
+    loop.register_monitor( tracing_abcd );
     loop.start();
 
 
@@ -108,5 +112,6 @@
   <div>
   <canvas id="timeseq"></canvas>
   </div>
+
 </body>
 </html>
