--- a/demos/alu.html
+++ b/demos/alu.html
@@ -20,7 +20,7 @@
   <script language="javascript" src="/scaffold/helpers.js"></script>
   <script language="javascript">
   function Onload( ) {
-    const WIDTH = 8;
+    const WIDTH = 16;
     var clk = new Clock( 1, 50 );
     var sigs = [];
     var sims = [];
@@ -34,11 +34,23 @@
     var opr_a = CreateInputDigits( WIDTH, "digitPanel", "opr_a", simulator, loop );
     var opr_b = CreateInputDigits( WIDTH, "digitPanel", "opr_b", simulator, loop );
     var inc_a = new Incrementer( opr_a, "inc(a)" );
+    var add_ab = new Adder( opr_a, opr_b, "a+b" );
+    var mul_ab = new Multiplier( opr_a, opr_b, "a*b" );
     Add2Simulator( simulator, inc_a.network );
+    Add2Simulator( simulator, add_ab.network );
+    Add2Simulator( simulator, mul_ab.network );
     sigs.push( inc_a.get_carry_endpoint() );
     loop.register_monitor( new DecimalDisplay( inc_a.get_output_endpoints(), false, "outputPanel", "inc(a)" ) );
     loop.register_monitor( new DecimalDisplay( inc_a.get_output_endpoints(), true, "outputPanel", "signed inc(a)" ) );
-    loop.register_monitor( new DecimalDisplay( inc_a.get_carry_endpoint(), false, "outputPanel", "inc(a).carry" ) );
+    loop.register_monitor( new DecimalDisplay( [inc_a.get_carry_endpoint()], false, "outputPanel", "inc(a).carry" ) );
+
+    loop.register_monitor( new DecimalDisplay( add_ab.get_output_endpoints(), false, "outputPanel", "a+b" ) );
+    loop.register_monitor( new DecimalDisplay( [add_ab.get_carry_endpoint()], false, "outputPanel", "(a+b).carry" ) );
+    loop.register_monitor( new DecimalDisplay( mul_ab.get_output_endpoints(), false, "outputPanel", "a*b" ) );
+    loop.register_monitor( new Tracer( opr_a, "tracing", "a" ) );
+    loop.register_monitor( new Tracer( opr_b, "tracing", "b" ) );
+    loop.register_monitor( new Tracer( add_ab.get_output_endpoints(), "tracing", "a+b" ) );
+    loop.register_monitor( new Tracer( mul_ab.get_output_endpoints(), "tracing", "a*b" ) );
 
 
     function update( )
@@ -65,6 +77,7 @@
   <div id="signalPanel" style="padding: 20px"></div>
   <div id="digitPanel" style="padding: 20px"></div>
   <div id="outputPanel" style="padding: 20px"></div>
+  <div id="tracing" style="padding: 20px"></div>
   <div>
   <canvas id="screen"></canvas>
   </div>
